25) Consolidate some bridge code for more optimize.<br>
26) Packet scheduler clock source set to jiffers for save cpu time.<br>
27) Add vlan_double_tag nvram variable for enable/disable QinQ support.<br>
28) Auto enable double vlan tag in switch at eth2 up.<br>
29) PPP Disable multilink operation by default.<br>
30) Fix h323: bug in parsing of ASN1 SEQOF field.<br>
31) Initial RT5330 support.<br>
32) Fix use ipcalc for ipt_accounting.<br>
33) l2tp/pptp only if server and gw in different subnets need add route to server via gw.<br>
34) Netfilter core optimize nf_hook_slow workaroudn.<br>
35) Update usb support for Ralink chips.<br>
36) More clean autodetect procedure of 2 stage.<br>
37) Add autodetect for NAND flash type. Now single image may be work at all flash types.<br>

<br>
<b>1.6.x</b><br>
1) PPE now work. Initial HW_NAT and PPPOE Offload mode support.<br>
2) For natFastpath nvram_variable add some modes (0-disable,1-SoftwareFastnatOnly,2-HardwareFastNatOnly,3-ComplexFastnat).<br>
3) Add select leases adress for static leases from list.<br>
4) Fix freez at reload wifi modules. Need remove hw_nat first.<br>
5) Revert workaround for some not correct configured in uboot devices as DIR-300NRU.<br>
6) Fix ipmacfilter in HardwareFastNatOnly and ComplexFastnat mode.<br>
7) Use states for servicelimit incoming connections and some macros in iptables script for readable.<br>
8) Default INPUT policy now set to DROP.<br>
9) Simple QoS suport. TOS based QoS for auto prio some ports and minimize delay for interactive applications. (simple_qos variable, need add in WebUI).<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>